src/objects/LeanData__LD_JSON_Search__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Search_Key_0__c</fullName>
        <label>Search Key 0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Search_Key_1__c</fullName>
        <label>Search Key 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Search_Key_2__c</fullName>
        <label>Search Key 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <label>Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_0__c</fullName>
        <label>Value 0</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_1__c</fullName>
        <label>Value 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_2__c</fullName>
        <label>Value 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>LD JSON Search</label>
    <nameField>
        <label>LD JSON Search</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD JSON Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>